feat: added first controller